Documenter enterprise endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ni6Vwx/EU43vsPsxgFQ/Vyz9R2FQhc7FcxjEOJHKmtU=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
