--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=MiniProyecto
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://192.168.2.213:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sistema_facturacion
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=your_database_name
+DB_USERNAME=your_postgresql_username
+DB_PASSWORD=your_postgresql_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -59,3 +59,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 APP_FRONTEND_URL=
+
+L5_SWAGGER_CONST_HOST=http://localhost:8000/api
