--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=MiniProyecto
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://192.168.2.213:8000
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
